--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,8 @@ aiofiles==23.2.1
 cryptography==42.0.0
 qrcode==7.4.2
 Pillow==10.2.0
-nodriver>=0.48
+nodriver==0.48.1
+websockets==16.0
 
 # Testing dependencies
 pytest==7.4.3
